Fix spelling and grammar of README.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This is a Java implementation of both Deterministic and Nondeterministic Finite
-Automota as discussed in the book Understanding Computation by Tom Stuart.
+This is a Java implementation of both deterministic and nondeterministic finite
+automaton as discussed in the book Understanding Computation by Tom Stuart.
